# cmtspeech

./: Makefile.am  cmtspeech.h  cmtspeech_backend_common.c  cmtspeech_backend_common.h  cmtspeech_nokiamodem.c  configure.ac  libcmtspeechdata.ver
debian/: changelog  control  libcmtspeechdata.install  rules
